--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="https://davididowu.netlify.app/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="https://davididowu.netlify.app/assets/css/style.css" rel="stylesheet">
+  <link href="/assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,8 +35,8 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/david_img.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Idowu David</a></h1>
+        <img src="https://davididowu.netlify.app/assets/img/david_img.jpeg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">David Akinmoyede</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/iamdamilosky" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://instagram.com/iamdamilosky" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -61,7 +61,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>David Akinmoyede</h1>
-      <p>I'm <span class="typed" data-typed-items="Content Creator, Web Developer, Problem solver, Analytical Thinker"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Content Creator, Web Developer, Problem Solver, Analytical Thinker"></span></p>
     </div>
   </section><!-- End Hero -->
 
